implementaion of company acceptance tests